--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <option value ="3">3</option>
             <option value ="4">4</option>
             <option value ="5">5</option>
+            <option value ="6">6</option>
+            <option value ="7">7</option>
+            <option value ="8">8</option>
+            <option value ="9">9</option>
+            <option value ="10">10</option>
            </select>
              <br> <br/>
         
@@ -30,7 +35,7 @@
         </span>
         
     <footer>
-        &#169; This Calculator belongs to Shiv
+        &#169; Everyone Can Get Rich
     </footer>
     </body>
 
